[package]
name = "start-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
panic = 'abort'

# 添加 crates.io 第三方依赖
[dependencies]
ferris-says = "0.3.1"

# 在构建脚本中使用
[build-dependencies]
bindgen = "0.69.1"

# 可以包含多个 binary crate
# [[bin]]
# 默认是 src/main.rs

# 只能包含一个 library crate
# [lib]
# 默认是 src/lib.rs
